<resources>
    <string name="app_name">EveMarketHub</string>
    <string name="item_details_item_name">ItemName</string>
    <string name="item_details_default_price">1000000000000</string>
    <string name="item_details_category_default">Category</string>
    <string name="item_details_descrip_default">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium.</string>

    <string name="nav_user_name_default">Eve Player Name</string>
    <string name="nav_user_email_default">android.studio@android.com</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="favourites_header">Favourite Items</string>
    <string name="item_details_last_updated_default">25/11/17 7:03PM</string>
    <string name="wallet_balence">1000000000000</string>
    <string name="stations_header">Favourite Stations</string>
    <string name="default_station_item_price">123456.58</string>
    <string name="default_station_item_name">Station Name</string>
    <string name="default_fav_station_name">Station Name</string>
    <string name="default_station_system">System Name</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="app_scheme">eveauth-evemerkethub-app:/</string>
    <string name="title_activity_station_details">StationDetails</string>
    <string name="station_button_text">Take Me There</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="homescreen">Homescreen</string>
    <string name="user_account">User Account</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="favourite">Favourite</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_lists">Refresh</string>
    <string name="ccp_hf_all_rights_reserved_used_with_permission">©CCP hf. All rights reserved. Used with permission.</string>
</resources>
