<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <ImageView
        android:id="@+id/player_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="Users Profile Image"
        app:layout_constraintBottom_toTopOf="@+id/player_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:layout_marginRight="8dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".3" />

    <TextView
        android:id="@+id/player_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_user_name_default"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/player_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/player_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_user_email_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/wallet_balence"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_side_padding"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:inputType="none"
        android:lines="1"
        android:text="@string/wallet_balence"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorSearchBorder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="@+id/player_icon"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/player_icon"
        android:gravity="end" />

</android.support.constraint.ConstraintLayout>