<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="ca.prairesunapplications.evemarkethub.screens.FavouriteItemCard">

    <android.support.v7.widget.CardView xmlns:card_view="https://schemas.android.com/apk/res-auto"
        android:id="@+id/fav_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fav_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:clickable="false"
                android:contextClickable="false"
                android:inputType="none"
                android:padding="2dp"
                android:text="@string/item_details_item_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorBackground" />

            <TextView
                android:id="@+id/fav_item_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/fav_item_name"
                android:clickable="false"
                android:contextClickable="false"
                android:inputType="none"
                android:padding="2dp"
                android:text="@string/item_details_descrip_default"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/colorGraphBackground" />

            <TextView
                android:id="@+id/fav_item_price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/fav_item_category"
                android:layout_alignParentBottom="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:clickable="false"
                android:contextClickable="false"
                android:inputType="none"
                android:padding="2dp"
                android:text="@string/item_details_default_price"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorPositivePriceDiff" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
