<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context="ca.prairesunapplications.evemarkethub.screens.StationDetails">

    <android.support.v7.widget.CardView xmlns:card_view="https://schemas.android.com/apk/res-auto"
        android:id="@+id/station_item_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        card_view:cardUseCompatPadding="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/station_item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:clickable="false"
                android:contextClickable="false"
                android:inputType="none"
                android:text="@string/item_details_item_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorSearchBorder"
                app:layout_constraintBottom_toTopOf="@+id/station_item_category"
                app:layout_constraintEnd_toStartOf="@+id/title_splitter"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/station_item_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/station_item_name"
                android:clickable="false"
                android:contextClickable="false"
                android:inputType="none"
                android:padding="2dp"
                android:text="@string/item_details_category_default"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/cardview_light_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.constraint.Guideline
                android:id="@+id/price_splitter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".6" />

            <android.support.constraint.Guideline
                android:id="@+id/title_splitter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.21" />

            <TextView
                android:id="@+id/station_item_avg_price"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignBottom="@+id/station_item_category"
                android:layout_alignParentBottom="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:contextClickable="false"
                android:elevation="0dp"
                android:gravity="center"
                android:inputType="none"
                android:lines="1"
                android:text="@string/item_details_default_price"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPositivePriceDiff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/price_splitter"
                app:layout_constraintStart_toStartOf="@+id/title_splitter"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/station_item_price"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignBottom="@+id/station_item_category"
                android:layout_alignParentBottom="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:contextClickable="false"
                android:elevation="0dp"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/item_details_default_price"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorNegativePriceDiff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/price_splitter"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RelativeOverlap" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
